@@ -2,11 +2,7 @@
  * Copyright (c) 2004-2009
  *
  * Author(s):
- *  Volker Fischer, Alexander Kurpiers
- *
- * This code is based on the Open-Source sound interface implementation of
- * the Dream DRM Receiver project.
- *
+ *  Volker Fischer
 \******************************************************************************/
 
 #if !defined(_SOUND_H__9518A621345F78_3634567_8C0D_EEBF182CF549__INCLUDED_)
@@ -25,13 +21,7 @@
 #include "global.h"
 
 #if WITH_SOUND
-# if USE_JACK
-#  include <jack/jack.h>
-# else
-#  define ALSA_PCM_NEW_HW_PARAMS_API
-#  define ALSA_PCM_NEW_SW_PARAMS_API
-#  include <alsa/asoundlib.h>
-# endif
+# include <jack/jack.h>
 #endif
 
 
@@ -48,7 +38,6 @@
 
 /* Classes ********************************************************************/
 #if WITH_SOUND
-# if USE_JACK
 class CSound : public CSoundBase
 {
 public:
@@ -82,64 +71,11 @@ protected:
     void CloseJack();
 
     // callbacks
-    static int process ( jack_nframes_t nframes, void* arg );
-    static int bufferSizeCallback ( jack_nframes_t nframes, void *arg );
-    static void shutdownCallback ( void *arg );
-    jack_client_t* pJackClient;
+    static int      process ( jack_nframes_t nframes, void* arg );
+    static int      bufferSizeCallback ( jack_nframes_t nframes, void *arg );
+    static void     shutdownCallback ( void *arg );
+    jack_client_t*  pJackClient;
 };
-# else
-class CSound : public CSoundBase
-{
-public:
-    CSound ( void (*fpNewProcessCallback) ( CVector<short>& psData, void* pParg ), void* pParg ) :
-        CSoundBase ( false, fpNewProcessCallback, pParg ), rhandle ( NULL ),
-        phandle ( NULL ), iCurPeriodSizeIn ( NUM_PERIOD_BLOCKS_IN ),
-        iCurPeriodSizeOut ( NUM_PERIOD_BLOCKS_OUT ), bChangParamIn ( true ),
-        bChangParamOut ( true ) {}
-    virtual ~CSound() { Close(); }
-
-    // not implemented yet, always return one device and default string
-    int         GetNumDev() { return 1; }
-    std::string GetDeviceName ( const int iDiD ) { return "wave mapper"; }
-    std::string SetDev ( const int iNewDev ) { return ""; } // dummy
-    int         GetDev() { return 0; }
-
-    virtual int Init ( const int iNewPrefMonoBufferSize )
-    {
-        // init base class
-        CSoundBase::Init ( iNewPrefMonoBufferSize );
-
-        // set internal buffer size for read and write
-        iBufferSizeIn  = iNewPrefMonoBufferSize;
-        iBufferSizeOut = iNewPrefMonoBufferSize;
-
-        InitRecording();
-        InitPlayback();
-
-        return iNewPrefMonoBufferSize;
-    }
-    virtual bool Read  ( CVector<short>& psData );
-    virtual bool Write ( CVector<short>& psData );
-
-protected:
-    void Close();
-    void InitRecording();
-    void InitPlayback();
-
-    snd_pcm_t* rhandle;
-    snd_pcm_t* phandle;
-
-    bool SetHWParams ( snd_pcm_t* handle, const int iBufferSizeIn,
-                       const int iNumPeriodBlocks );
-
-    int iBufferSizeOut;
-    int iBufferSizeIn;
-    bool bChangParamIn;
-    int iCurPeriodSizeIn;
-    bool bChangParamOut;
-    int iCurPeriodSizeOut;
-};
-# endif // USE_JACK
 #else
 // no sound -> dummy class definition
 class CSound : public CSoundBase
